clusters/vollminlab-cluster/shlink/shlink/app/ingress-vl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shlink-vl-ingress
  namespace: shlink
  labels:
    app: shlink
    env: production
    category: apps
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/server-snippet: |
      return 301 https://vollm.in$request_uri;
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - vl
      secretName: vl-tls
  rules:
    - host: vl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shlink-shlink-backend
                port:
                  number: 8080
