clusters/vollminlab-cluster/shlink/shlink/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shlink
  namespace: shlink
  labels:
    app: shlink
    env: production
    category: apps
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - go.vollminlab.com
        - vl.vollminlab.com
      secretName: wildcard-tls
    - hosts:
        - vollm.in
      secretName: vollm-in-tls
    - hosts:
        - vl
      secretName: vl-tls
  rules:
    - host: go.vollminlab.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shlink-shlink-backend
                port:
                  number: 8080
    - host: vl.vollminlab.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shlink-shlink-backend
                port:
                  number: 8080
    - host: vollm.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shlink-shlink-backend
                port:
                  number: 8080
    - host: vl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shlink-shlink-backend
                port:
                  number: 8080
